Prevent "screenshots" from becoming too large

--- a/src/styles/content/WebVrdemo.css
+++ b/src/styles/content/WebVrdemo.css
@@ -1,3 +1,7 @@
 .webvrdemo-component {
   /*border: 1px dashed #f00;*/
 }
+
+.webvrdemo-component .screenshot {
+  max-height: 80vh;
+}
